--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,9 @@ add_executable(n_body_simulation_GL
         menuGUI.h
         renderer.cpp
         renderer.h
+        physicsEngine.cpp
+        physicsEngine.h
+        config.h
 )
 
 # ------------------------------------
